fixed alignment in card title

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ body {
 
 #books {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-auto-rows: 400px;
     padding: 15px;
     gap: 15px;
@@ -163,7 +163,7 @@ body {
 }
 
 .book-title {
-    font-size: 26px;
+    font-size: 20px;
     font-weight: 700;
 }
 
